<resources>
    <string name="app_name">MEAW</string>
    <string name="title_activity_lecture_profile">My Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">0123456789</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="meaw">takuma</string>
    <string name="log_in">Log In</string>
    <string name="need_a_help"><u>Need a help?</u></string>
    <string name="home">Home</string>
    <string name="books_explorer">Books Explorer</string>
    <string name="download_books">Download Books</string>
    <string name="upload_books">Upload Books</string>
    <string name="title_activity_bottom_nav_bar">BottomNavBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_r_main">rMainActivity</string>
    <string name="title_activity_need_help">NeedHelpActivity</string>
    <string name="registration_successs">Registration Success</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="id">ID</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>


    <string name="StudentHome">Student home fragment</string>
    <string name="StudentClassOpt">Student class options fragment</string>
    <string name="StudentQuizz">Student Quizz fragment</string>
    <string name="StudentProf">Student profile fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_quiz">Quizz</string>
    <string name="title_classopt">Opsi courses</string>
    <string name="upload_materi">Upload Materi</string>
    <string name="upload">Upload</string>
    <string name="log_out">Log Out</string>
    <string name="lihat_materi">Lihat materi</string>
    <string name="recent_class">Recent Class</string>
    <string name="class_a">Class A</string>
    <string name="todo">TODO</string>
    <string name="class_b">Class B</string>
    <string name="class_c">Class C</string>
    <string name="more">More...</string>
    <string name="notification">Notification</string>
    <string name="notification_a">Notification A</string>
    <string name="notification_b">Notification B</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="vertical_line">|</string>
    <string name="your_email">Your email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_status">Your status</string>
    <string name="student">Student</string>
    <string name="lecture">Lecture</string>
    <string name="create_account">Create Account</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="send_verification">Send Verification</string>
    <string name="logins">Logins</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_profile">Account Profile</string>
    <string name="contacts">Contacts</string>
    <string name="schedule">Schedule</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="systems">Systems</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="what_do_you_need">What Do You Need?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="click_me">Click Me</string>
    <string name="need_more_information_follow_us">Need More Information? Follow Us!</string>
    <string name="upload_book">Upload Book</string>
    <string name="insert_a_file">Insert a File</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="myclass">Class</string>
    <string name="complete_your_registration">Complete Your Registration</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="departement">Departement</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="change">Change</string>
    <string name="title">Title</string>
    <string name="include_expiration_date">Include expiration date?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="date">Date</string>
    <string name="set_expiration_date">Set Expiration Date</string>
    <string name="set_date">Set Date</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_lecture_main"></string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
</resources>
