<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/account_profile" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_cyan_700_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/about_us" />
        </menu>
    </item>

    <item android:title="@string/systems">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_cyan_a700_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help_center"
                android:icon="@drawable/ic_help_outline_cyan_a700_24dp"
                android:title="@string/help_center" />
        </menu>
    </item>

</menu>
