<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowPrimary"
    tools:context=".UploadBooksFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/upload_book"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_white"
            android:drawableStart="@drawable/ic_attachment_black_24dp"
            android:text="@string/insert_a_file"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_white"
            android:drawableStart="@drawable/ic_format_color_text_black_24dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_white"
            android:drawableStart="@drawable/ic_filter_list_black_24dp"
            android:hint="@string/category"
            android:inputType="text"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_white"
            android:drawableStart="@drawable/ic_class_black_24dp"
            android:hint="@string/myclass"
            android:inputType="text"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/sh_dark_blue"
            android:drawableEnd="@drawable/ic_file_upload_white_24dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>