<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ResetPasswordFragment">

    <EditText
        android:id="@+id/forgetpassword_edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/sh_login_full"
        android:gravity="center"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/transparentWhite"
        android:textSize="20sp" />


    <Button
        android:id="@+id/forgetpassword_btn_send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/sh_yellow_primary"
        android:gravity="center"
        android:text="@string/send_verification"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgetpassword_txv_go_to_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/go_to_login_page"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />
</FrameLayout>