<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowPrimary"
    tools:context=".ProfileFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_radio_button_checked_black_24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/futura_bold"
                    android:text="@string/username"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/profile_edt_username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white"
                    android:fontFamily="@font/futura_bold"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/basic_profile"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/futura_bold"
                    android:text="@string/title"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/profile_edt_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white"
                    android:fontFamily="@font/futura_bold"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/futura_bold"
                    android:text="@string/status"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profile_txv_status"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white"
                    android:fontFamily="@font/futura_bold"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


            <Button
                android:id="@+id/profile_btn_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/sh_yellow_dark_primary"
                android:fontFamily="@font/futura_bold"
                android:gravity="center"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>